// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Accordion /> Should render multiple elements and match the snapshot 1`] = `
.c0 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  margin-bottom: 7px;
}

.c4 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  width: 100%;
}

.c3 {
  border-radius: 5px;
  color: white;
  cursor: pointer;
  width: 100%;
  background-color: rgba(0,0,237,1);
  height: 40px;
  padding-top: 12px;
  padding-bottom: 12px;
  padding-right: 12px;
  padding-left: 12px;
}

.c3 .animated-img {
  -webkit-transition: -webkit-transform 0.3s,height 4s;
  -webkit-transition: transform 0.3s,height 4s;
  transition: transform 0.3s,height 4s;
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.c6 .ReactCollapse--collapse {
  -webkit-transition: height 480ms ease;
  transition: height 480ms ease;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: auto;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  justify-items: space-between;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  outline: none;
  border: none;
  background: transparent;
  font-weight: bold;
  font-size: 13px;
  line-height: 17px;
  padding: 2px;
  cursor: pointer;
  margin-right: 0;
  margin-left: 5px;
  font-weight: 700;
  color: #2F3850;
}

<div>
  <div
    class="styled__AccordionContainer-sc-nwquto-0"
  >
    <div
      data-rbd-droppable-context-id="1"
      data-rbd-droppable-id="block-list"
    >
      <div
        class="c0"
        data-rbd-draggable-context-id="1"
        data-rbd-draggable-id="accordion-0"
      >
        <div
          class="c1"
        >
          <div
            class="c2"
          >
            <div
              aria-describedby="rbd-hidden-text-1-hidden-text-5"
              class="c3"
              data-rbd-drag-handle-context-id="1"
              data-rbd-drag-handle-draggable-id="accordion-0"
              draggable="false"
              height="40px"
              role="button"
              tabindex="0"
            >
              <div
                class="c2"
              >
                Label0
                <div
                  class="c4"
                  display="flex"
                >
                  <img
                    class="img"
                    src="IMAGE_MOCK"
                  />
                </div>
              </div>
            </div>
            <button
              aria-label="Delete"
              class="c5"
              data-cy="accordion-element-delete-0"
              data-testid="bin-Label0"
              font-weight="bold"
              title="Delete"
              type="button"
            >
              <img
                src="IMAGE_MOCK"
              />
            </button>
          </div>
          <div
            class="c6"
          />
        </div>
      </div>
      <div
        class="c0"
        data-rbd-draggable-context-id="1"
        data-rbd-draggable-id="accordion-1"
      >
        <div
          class="c1"
        >
          <div
            class="c2"
          >
            <div
              aria-describedby="rbd-hidden-text-1-hidden-text-5"
              class="c3"
              data-rbd-drag-handle-context-id="1"
              data-rbd-drag-handle-draggable-id="accordion-1"
              draggable="false"
              height="40px"
              role="button"
              tabindex="0"
            >
              <div
                class="c2"
              >
                Label1
                <div
                  class="c4"
                  display="flex"
                >
                  <img
                    class="img"
                    src="IMAGE_MOCK"
                  />
                </div>
              </div>
            </div>
            <button
              aria-label="Delete"
              class="c5"
              data-cy="accordion-element-delete-1"
              data-testid="bin-Label1"
              font-weight="bold"
              title="Delete"
              type="button"
            >
              <img
                src="IMAGE_MOCK"
              />
            </button>
          </div>
          <div
            class="c6"
          />
        </div>
      </div>
      <div
        class="c0"
        data-rbd-draggable-context-id="1"
        data-rbd-draggable-id="accordion-2"
      >
        <div
          class="c1"
        >
          <div
            class="c2"
          >
            <div
              aria-describedby="rbd-hidden-text-1-hidden-text-5"
              class="c3"
              data-rbd-drag-handle-context-id="1"
              data-rbd-drag-handle-draggable-id="accordion-2"
              draggable="false"
              height="40px"
              role="button"
              tabindex="0"
            >
              <div
                class="c2"
              >
                Label2
                <div
                  class="c4"
                  display="flex"
                >
                  <img
                    class="img"
                    src="IMAGE_MOCK"
                  />
                </div>
              </div>
            </div>
            <button
              aria-label="Delete"
              class="c5"
              data-cy="accordion-element-delete-2"
              data-testid="bin-Label2"
              font-weight="bold"
              title="Delete"
              type="button"
            >
              <img
                src="IMAGE_MOCK"
              />
            </button>
          </div>
          <div
            class="c6"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Accordion /> Should render only one element and match the snapshot 1`] = `
.c3 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  width: 100%;
}

.c2 {
  border-radius: 5px;
  color: white;
  cursor: pointer;
  width: 100%;
  background-color: rgba(0,0,237,1);
  height: 40px;
  padding-top: 12px;
  padding-bottom: 12px;
  padding-right: 12px;
  padding-left: 12px;
}

.c2 .animated-img {
  -webkit-transition: -webkit-transform 0.3s,height 4s;
  -webkit-transition: transform 0.3s,height 4s;
  transition: transform 0.3s,height 4s;
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.c5 .ReactCollapse--collapse {
  -webkit-transition: height 480ms ease;
  transition: height 480ms ease;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: auto;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  justify-items: space-between;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  outline: none;
  border: none;
  background: transparent;
  font-weight: bold;
  font-size: 13px;
  line-height: 17px;
  padding: 2px;
  cursor: pointer;
  margin-right: 0;
  margin-left: 5px;
  font-weight: 700;
  color: #2F3850;
}

<div>
  <div
    class="styled__AccordionContainer-sc-nwquto-0"
  >
    <div
      class="c0"
    >
      <div
        class="c1"
      >
        <div
          class="c2"
          height="40px"
        >
          <div
            class="c1"
          >
            Label0
            <div
              class="c3"
              display="flex"
            >
              <img
                class="img"
                src="IMAGE_MOCK"
              />
            </div>
          </div>
        </div>
        <button
          aria-label="Delete"
          class="c4"
          data-cy="accordion-element-delete-0"
          data-testid="bin-Label0"
          font-weight="bold"
          title="Delete"
          type="button"
        >
          <img
            src="IMAGE_MOCK"
          />
        </button>
      </div>
      <div
        class="c5"
      />
    </div>
  </div>
</div>
`;

exports[`<Accordion /> Should render with one element opened and match the snapshot 1`] = `
.c0 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  margin-bottom: 7px;
}

.c4 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  width: 100%;
}

.c3 {
  border-radius: 5px;
  color: white;
  cursor: pointer;
  width: 100%;
  background-color: rgba(0,0,237,1);
  height: 40px;
  padding-top: 12px;
  padding-bottom: 12px;
  padding-right: 12px;
  padding-left: 12px;
}

.c3 .animated-img {
  -webkit-transition: -webkit-transform 0.3s,height 4s;
  -webkit-transition: transform 0.3s,height 4s;
  transition: transform 0.3s,height 4s;
  -webkit-transform: rotate0deg);
  -ms-transform: rotate0deg);
  transform: rotate0deg);
}

.c7 {
  border-radius: 5px;
  color: white;
  cursor: pointer;
  width: 100%;
  background-color: rgba(0,0,237,1);
  height: 40px;
  padding-top: 12px;
  padding-bottom: 12px;
  padding-right: 12px;
  padding-left: 12px;
}

.c7 .animated-img {
  -webkit-transition: -webkit-transform 0.3s,height 4s;
  -webkit-transition: transform 0.3s,height 4s;
  transition: transform 0.3s,height 4s;
  -webkit-transform: rotate(180deg);
  -ms-transform: rotate(180deg);
  transform: rotate(180deg);
}

.c6 .ReactCollapse--collapse {
  -webkit-transition: height 480ms ease;
  transition: height 480ms ease;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: auto;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  justify-items: space-between;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  outline: none;
  border: none;
  background: transparent;
  font-weight: bold;
  font-size: 13px;
  line-height: 17px;
  padding: 2px;
  cursor: pointer;
  margin-right: 0;
  margin-left: 5px;
  font-weight: 700;
  color: #2F3850;
}

<div>
  <div
    class="styled__AccordionContainer-sc-nwquto-0"
  >
    <div
      data-rbd-droppable-context-id="2"
      data-rbd-droppable-id="block-list"
    >
      <div
        class="c0"
        data-rbd-draggable-context-id="2"
        data-rbd-draggable-id="accordion-0"
      >
        <div
          class="c1"
        >
          <div
            class="c2"
          >
            <div
              aria-describedby="rbd-hidden-text-2-hidden-text-10"
              class="c3"
              data-rbd-drag-handle-context-id="2"
              data-rbd-drag-handle-draggable-id="accordion-0"
              draggable="false"
              height="40px"
              role="button"
              tabindex="0"
            >
              <div
                class="c2"
              >
                Label0
                <div
                  class="c4"
                  display="flex"
                >
                  <img
                    class="img"
                    src="IMAGE_MOCK"
                  />
                </div>
              </div>
            </div>
            <button
              aria-label="Delete"
              class="c5"
              data-cy="accordion-element-delete-0"
              data-testid="bin-Label0"
              font-weight="bold"
              title="Delete"
              type="button"
            >
              <img
                src="IMAGE_MOCK"
              />
            </button>
          </div>
          <div
            class="c6"
          />
        </div>
      </div>
      <div
        class="c0"
        data-rbd-draggable-context-id="2"
        data-rbd-draggable-id="accordion-1"
      >
        <div
          class="c1"
        >
          <div
            class="c2"
          >
            <div
              aria-describedby="rbd-hidden-text-2-hidden-text-10"
              class="c7"
              data-rbd-drag-handle-context-id="2"
              data-rbd-drag-handle-draggable-id="accordion-1"
              draggable="false"
              height="40px"
              role="button"
              tabindex="0"
            >
              <div
                class="c2"
              >
                Label1
                <div
                  class="c4"
                  display="flex"
                >
                  <img
                    class="img"
                    src="IMAGE_MOCK"
                  />
                </div>
              </div>
            </div>
            <button
              aria-label="Delete"
              class="c5"
              data-cy="accordion-element-delete-1"
              data-testid="bin-Label1"
              font-weight="bold"
              title="Delete"
              type="button"
            >
              <img
                src="IMAGE_MOCK"
              />
            </button>
          </div>
          <div
            class="c6"
          />
        </div>
      </div>
      <div
        class="c0"
        data-rbd-draggable-context-id="2"
        data-rbd-draggable-id="accordion-2"
      >
        <div
          class="c1"
        >
          <div
            class="c2"
          >
            <div
              aria-describedby="rbd-hidden-text-2-hidden-text-10"
              class="c7"
              data-rbd-drag-handle-context-id="2"
              data-rbd-drag-handle-draggable-id="accordion-2"
              draggable="false"
              height="40px"
              role="button"
              tabindex="0"
            >
              <div
                class="c2"
              >
                Label2
                <div
                  class="c4"
                  display="flex"
                >
                  <img
                    class="img"
                    src="IMAGE_MOCK"
                  />
                </div>
              </div>
            </div>
            <button
              aria-label="Delete"
              class="c5"
              data-cy="accordion-element-delete-2"
              data-testid="bin-Label2"
              font-weight="bold"
              title="Delete"
              type="button"
            >
              <img
                src="IMAGE_MOCK"
              />
            </button>
          </div>
          <div
            class="c6"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
